# perishable_food_optimization

./: .gitignore  README.md  pyproject.toml
notebooks/: afresh_code.ipynb  afresh_code_original.ipynb  afresh_code_updated.ipynb  afresh_cvxpy.ipynb  kalman_filter.ipynb  survival_analysis.ipynb  tcnforecasting.ipynb
