[tool.poetry]
name = "perishable_food_optimization"
version = "0.1.0"
description = ""
authors = ["Jonathan Hilgart <jonathan.hilgart@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
darts = "^0.16.1"
cvxpy = "^1.1.18"
pymc3 = "^3.11.4"
scikit-survival = "^0.17.0"
scipy = "^1.7.3"
seaborn = "^0.11.2"
pykalman = "^0.9.5"


[tool.poetry.dev-dependencies]
appnope = "^0.1.0"
black = "^20.8b1"
dvc = "^0.70.0"
flake8 = "^3.7.9"
ipython = "^7.9"
isort = "^4.3"
jupyter = "^1.0"
mypy = "^0.780"
pre-commit = "^1.20.0"
pytest = "^5.4.3"
pytest-cov = "^2.10.1"
ipykernel = "^6.4.2"
pyproject-flake8 = "^0.0.1-alpha.2"
tqdm = "^4.47.0"
jupyterlab = "^3.2.8"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
force_grid_wrap = 0
use_parentheses = true
line_length = 120
not_skip = "__init__.py"


[tool.pytest]
log_cli=true
log_level="DEBUG"


[tool.black]
line-length = 120


[tool.flake8]
max-line-length = 120


[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
